--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3": "^7.8.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "d3": "^7.8.5"
+    "pixi.js": "^7.4.0",
+    "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/d3": "^7.4.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-virtualized": "^9.21.29",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
