--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "d3": "^7.8.5",
+    "esbuild": "0.21.5",
     "lucide-react": "^0.344.0",
     "pixi.js": "^7.4.0",
     "react": "^18.3.1",
