--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     environment:
       - NODE_ENV=development
     command: >
-      sh -c "node node_modules/esbuild/install.js && npm run dev"
+      sh -c "node node_modules/esbuild/install.js && npm run dev -- --host 0.0.0.0"
