--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pixi.js": "^7.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.1",
     "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
