--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.8.5",
     "esbuild": "0.21.5",
     "lucide-react": "^0.344.0",
+    "mermaid": "^11.6.0",
     "pixi.js": "^7.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
